* Changed to use Volume::InodeSize() over sizeof(ext2_inode) as described   in ticket #2707. Thanks Adrian!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28536 a95241bf-73f2-0310-859d-f6bbb57e9c96